<resources>
    <string name="app_name">Chopdi</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">Home</string>

    <string name="action_reports">Reports</string>
    <string name="action_new_cust">New Customer</string>
    <string name="action_logout">Log Out</string>
    <string name="action_expenses">Expenses</string>
    <string name="action_collection">Collection</string>
    <string-array name="expense_type">
        <item>Transport</item>
        <item>Bills</item>
        <item>Savings</item>
        <item>Other</item>
    </string-array>
    <string name="title_activity_new_customer">New Customer</string>
    <string name="title_activity_reports">Reports</string>
    <string name="title_activity_setting">Setting</string>
    <string name="title_activity_single_bill">SingleBillActivity</string>
    <string name="title_activity_expenses">Expenses</string>
    <string name="title_activity_collection">Collection</string>
</resources>
