<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context="com.ssl.san.chopdi.HomeActivity">
    <item android:id="@+id/action_new_cust"
        android:title="@string/action_new_cust"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_reports"
        android:title="@string/action_reports"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_expenses"
        android:title="@string/action_expenses"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:orderInCategory="100"
        app:showAsAction="always"/>
</menu>
